--- a/assets/styles/scss/pages/_index.scss
+++ b/assets/styles/scss/pages/_index.scss
@@ -127,6 +127,10 @@
             }
         }
 
+        .button-play-container {
+            display: none;
+        }
+
         video {
             display: none;
         }
@@ -241,6 +245,22 @@
                     z-index: 1;
                 }
                 
+            }
+
+            .button-play-container {
+                display: block;
+                position: absolute;
+                bottom: 10px;
+                right: 20px;
+                z-index: 1;
+                .button-play {
+                    border: none;
+                    background-color: transparent;
+                    color: white;
+                    &:focus {
+                        outline: none;
+                    }
+                }
             }
             
             video {
