--- a/assets/styles/scss/pages/_index.scss
+++ b/assets/styles/scss/pages/_index.scss
@@ -157,6 +157,10 @@
     }
 }
 
+.fixed-navigation {
+    position: fixed;
+}
+
 @include media-breakpoint-up(sm) {
     .header-index {
         background-size: 100% 50%;
