--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -299,6 +299,7 @@
         .container-card-image {
             overflow: hidden;
             min-height: 80px;
+            max-height: 100px;
             img {
                 width: 100%;
             }
@@ -309,6 +310,7 @@
             }
             p {
                 font-size: 0.7rem;
+                margin-top: -5px;
             }
         }
     }
@@ -318,21 +320,19 @@
         .card-travel {
             position: relative;
             margin-right: 20px;
-            min-width: 200px;
             .container-card-image {
                 height: 80px;
                 width: 120px;
             }
             .card-body-travel {
                 position: absolute;
-                left: 120px;
+                left: 110px;
                 top: 0;
-                min-height: 120px;
                 h5 {
-                    font-size: 1rem;
+                    font-size: 0.9rem;
                 }
                 p {
-                    font-size: 0.8rem;
+                    font-size: 0.7rem;
                 }
             }
         }
@@ -353,9 +353,7 @@
             visibility: hidden;
         }
         
-    }
-
-    
+    }    
 }
 
 .container-fixed-bar {
@@ -385,6 +383,43 @@
             }
             
         }
+    }
+}
+
+.section-fixed-navigation-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin-bottom: 0;
+    .card-fixed-navigation-bar {
+        border-radius: 0;
+        .card-body-fixed-navigation-bar {
+            display: flex;
+            justify-content: center;
+            div {
+                margin-right: 50px;
+                font-size: 10px;
+                display: flex;
+                flex-direction: column;
+                &:last-child {
+                    margin-right: 0;
+                }
+                span {
+                    margin-left: -2px;
+                    margin-top: 5px;
+                }
+                &.active {
+                    color: #ff5a5f;
+                    span {
+                        margin-left: -5px;
+                    }
+                }
+            }
+        }
+    }
+    @include media-breakpoint-up(md) {
+        display: none;
     }
 }
 
