--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -9190,6 +9190,10 @@ textarea:focus, input:focus, input[type]:focus, .dropdown-guest:focus {
           flex-direction: column;
 }
 
+.fixed-navigation {
+  position: fixed;
+}
+
 @media (min-width: 576px) {
   .header-index {
     background-size: 100% 50%;
@@ -9330,7 +9334,7 @@ textarea:focus, input:focus, input[type]:focus, .dropdown-guest:focus {
 
 .header-homes .container-searchbar .search-bar {
   padding: 25px 20px;
-  min-width: 250px;
+  width: 200px;
   margin-left: -20px;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -9354,6 +9358,10 @@ textarea:focus, input:focus, input[type]:focus, .dropdown-guest:focus {
 .header-homes .container-searchbar .search-bar::placeholder {
   visibility: hidden;
   font-weight: 900;
+}
+
+.header-homes .container-searchbar .search-bar:focus {
+  outline: none;
 }
 
 .list-filter {
@@ -9396,35 +9404,117 @@ textarea:focus, input:focus, input[type]:focus, .dropdown-guest:focus {
 }
 
 .container-banner {
-  height: 440px;
+  position: relative;
   overflow: hidden;
+  max-height: 450px;
 }
 
-.container-banner .zoom {
+.container-banner .slick-container-banner img {
+  width: 100%;
+  max-height: 250px;
+}
+
+.container-banner .slick-dots {
+  position: absolute;
+  bottom: 2%;
+  left: 50%;
+  margin-left: -90px;
+}
+
+.container-banner .upload, .container-banner .heart, .container-banner .show-photos {
+  position: absolute;
+  z-index: 2;
+}
+
+.container-banner .upload svg, .container-banner .heart svg, .container-banner .show-photos svg {
+  width: 25px;
+}
+
+.container-banner .heart {
+  right: 20px;
+  top: 30px;
+}
+
+.container-banner .upload {
+  right: 60px;
+  top: 25px;
+}
+
+@media (min-width: 768px) {
+  .container-banner-mobile {
+    display: none;
+  }
+}
+
+.container-banner-desktop {
+  border-bottom: 2px solid black;
+}
+
+.container-banner-desktop .zoom {
   border: 2px solid black;
 }
 
-.container-banner .zoom img {
+.container-banner-desktop .zoom img {
   width: 100%;
-  height: 100%;
+  height: 460px;
   -webkit-transition: -webkit-transform .5s ease;
   transition: -webkit-transform .5s ease;
   transition: transform .5s ease;
   transition: transform .5s ease, -webkit-transform .5s ease;
 }
 
-.container-banner .zoom img:hover {
+.container-banner-desktop .zoom img:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-.container-banner .right {
+.container-banner-desktop .right {
   overflow: hidden;
 }
 
-.container-banner .right img {
+.container-banner-desktop .right img {
   width: 100%;
   height: 220px;
+}
+
+.container-banner-desktop .upload, .container-banner-desktop .heart, .container-banner-desktop .show-photos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 5px;
+  padding: 5px 14px;
+  background-color: white;
+  text-decoration: none;
+}
+
+.container-banner-desktop .upload svg, .container-banner-desktop .heart svg, .container-banner-desktop .show-photos svg {
+  width: 15px;
+}
+
+.container-banner-desktop .upload span, .container-banner-desktop .heart span, .container-banner-desktop .show-photos span {
+  color: #484848;
+  margin-left: 10px;
+  font-size: 14px;
+}
+
+.container-banner-desktop .upload {
+  right: 120px;
+}
+
+.container-banner-desktop .heart {
+  right: 20px;
+  top: 25px;
+}
+
+.container-banner-desktop .show-photos {
+  bottom: 20px;
+  right: 20px;
+}
+
+@media (max-width: 767.98px) {
+  .container-banner-desktop {
+    display: none;
+  }
 }
 
 .main-rooms {
@@ -10167,6 +10257,7 @@ small {
 .container-card-travel .card-travel .container-card-image {
   overflow: hidden;
   min-height: 80px;
+  max-height: 100px;
 }
 
 .container-card-travel .card-travel .container-card-image img {
@@ -10179,6 +10270,7 @@ small {
 
 .container-card-travel .card-travel .card-body-travel p {
   font-size: 0.7rem;
+  margin-top: -5px;
 }
 
 @media (min-width: 768px) {
@@ -10188,7 +10280,6 @@ small {
   .container-card-travel .card-travel {
     position: relative;
     margin-right: 20px;
-    min-width: 200px;
   }
   .container-card-travel .card-travel .container-card-image {
     height: 80px;
@@ -10196,15 +10287,14 @@ small {
   }
   .container-card-travel .card-travel .card-body-travel {
     position: absolute;
-    left: 120px;
+    left: 110px;
     top: 0;
-    min-height: 120px;
   }
   .container-card-travel .card-travel .card-body-travel h5 {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
   .container-card-travel .card-travel .card-body-travel p {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
   .container-card-travel .slick-prev-card, .container-card-travel .slick-next-card {
     visibility: visible;
@@ -10264,6 +10354,62 @@ small {
 
 .container-fixed-bar .card-fixed .card-body-fixed .container-reserve button {
   padding: 10px 60px;
+}
+
+.section-fixed-navigation-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.section-fixed-navigation-bar .card-fixed-navigation-bar {
+  border-radius: 0;
+}
+
+.section-fixed-navigation-bar .card-fixed-navigation-bar .card-body-fixed-navigation-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-fixed-navigation-bar .card-fixed-navigation-bar .card-body-fixed-navigation-bar div {
+  margin-right: 50px;
+  font-size: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.section-fixed-navigation-bar .card-fixed-navigation-bar .card-body-fixed-navigation-bar div:last-child {
+  margin-right: 0;
+}
+
+.section-fixed-navigation-bar .card-fixed-navigation-bar .card-body-fixed-navigation-bar div span {
+  margin-left: -2px;
+  margin-top: 5px;
+}
+
+.section-fixed-navigation-bar .card-fixed-navigation-bar .card-body-fixed-navigation-bar div.active {
+  color: #ff5a5f;
+}
+
+.section-fixed-navigation-bar .card-fixed-navigation-bar .card-body-fixed-navigation-bar div.active span {
+  margin-left: -5px;
+}
+
+@media (min-width: 768px) {
+  .section-fixed-navigation-bar {
+    display: none;
+  }
 }
 
 @media (max-width: 767.98px) {
