Guest dropdown menu is implemented

--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $tundora: #484848;
 $teal: #008489;
 $cannon-pink: #914669;
 $boulder: #767676;
+$billizard-blue: #99ede6;
 
 $input-focus-box-shadow: none;
 
