--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -568,6 +568,39 @@
         .card-dates {
             .card-body-dates {
                 width: 380px;
+                .form-card-dates {
+                    line-height: 1.5rem;
+                    .input-dates {
+                        border: 1px solid rgb(221, 220, 220);
+                        border-radius: 3px;
+                        height: 35px;
+                        display: flex;
+                        justify-content: space-between;
+                        input {
+                            flex-basis: 2;
+                            border: none;
+                            height: 100%;
+                            font-size: 16px;
+                            &:focus {
+                                background-color: $billizard-blue;
+                            }
+                        }
+                        svg {
+                            align-self: center;
+                            flex-basis: 1;
+                            margin-left: 20px;
+                            margin-right: 10px;
+                            width: 40px;
+                        }
+                    }
+
+                    label {
+                        font-size: 12 px;
+                        font-weight: 600;
+                        color: $tundora;
+                    }
+                }
+
                 .card-dates-hidden {
                     display: flex;
                     justify-content: space-between;
@@ -578,7 +611,8 @@
             display: flex; 
             justify-content: center;
             color: $boulder;
-            margin-top: 20px;
+            
+            font-size: 14px;
         }
     }
 
