Homes page's pagination buttons are added

--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -629,6 +629,7 @@
             height: 85px;
             min-width: 200px;
             margin-right: 20px;
+            box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
             .container-card-image {
                 width: 125px;
             }
