--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -6,7 +6,7 @@ p {
     color: rgb(72, 72, 72);
 }
 
-section {
+.container-section {
     margin-bottom: 3rem;
     @include media-breakpoint-up(sm) {
         margin-bottom: 5.93rem;
