Search and reserve cards' datepickers and submit objects are implemented

--- a/src/assets/styles/scss/components/_button.scss
+++ b/src/assets/styles/scss/components/_button.scss
@@ -65,8 +65,8 @@
                     border-radius: 50%;
                     border: 1px solid $teal;
                     background-color: white;
-                    max-width: 40px;
-                    max-height: 25px;
+                    min-width: 35px;
+                    min-height: 32px;   
                 }
             }
         }
