--- a/src/assets/styles/scss/main.scss
+++ b/src/assets/styles/scss/main.scss
@@ -47,6 +47,9 @@
 @import "~bootstrap/scss/utilities";
 // @import "~bootstrap/scss/print";
 
+// Datepicker
+@import "~@chenfengyuan/datepicker/src/css/datepicker.scss";
+
 // My scss
 
 // Base
