--- a/src/assets/styles/scss/pages/_homes.scss
+++ b/src/assets/styles/scss/pages/_homes.scss
@@ -19,7 +19,7 @@
     
         .search-bar {
             padding: 25px 20px;
-            width: 200px;
+            min-width: 250px;
             margin-left: -20px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             &::placeholder {
